--- a/src/main/webapp/app/exam/manage/student-exams/student-exams.component.html
+++ b/src/main/webapp/app/exam/manage/student-exams/student-exams.component.html
@@ -5,9 +5,11 @@
                 <span jhiTranslate="artemisApp.studentExams.studentExams">Student exams</span>
             </h2>
         </div>
-        <button (click)="generateStudentExams()">
-            <span jhiTranslate="artemisApp.studentExams.generateStudentExams">Generate student exams</span>
-        </button>
+        <div class="ml-auto d-flex">
+            <button class="btn btn-primary" style="height: 40px" (click)="generateStudentExams()">
+                <span jhiTranslate="artemisApp.studentExams.generateStudentExams">Generate student exams</span>
+            </button>
+        </div>
     </div>
     <jhi-alert></jhi-alert>
     <jhi-data-table
@@ -45,12 +47,9 @@
                         </span>
                     </ng-template>
                     <ng-template ngx-datatable-cell-template let-value="value">
-                        <div *ngIf="course.isAtLeastInstructor; else displayId">
+                        <div>
                             <a routerLink="/course-management/{{ courseId }}/exams/{{ examId }}/studentExams/{{ value }}/view">{{ value }}</a>
                         </div>
-                        <ng-template #displayId>
-                            {{ value }}
-                        </ng-template>
                     </ng-template>
                 </ngx-datatable-column>
 
@@ -64,7 +63,7 @@
                         </span>
                     </ng-template>
                     <ng-template ngx-datatable-cell-template let-value="value">
-                        <a routerLink="/course-management/{{ courseId }}">{{ course.title }}</a>
+                        <a routerLink="/course-management/{{ courseId }}/exams/{{ examId }}/view">{{ course?.title }}</a>
                     </ng-template>
                 </ngx-datatable-column>
 
@@ -113,8 +112,8 @@
                 <ngx-datatable-column prop="" [minWidth]="350" [width]="350">
                     <ng-template ngx-datatable-cell-template let-value="value">
                         <div class="w-100 text-right">
-                            <div *ngIf="course.isAtLeastTutor" class="btn-group">
-                                <button class="d-none d-md-table-cell" routerLink="/course-management/{{ courseId }}/exams/{{ examId }}/studentExams/{{ value }}/view">
+                            <div class="btn-group">
+                                <button class="btn btn-primary btn-sm mr-1 mb-1" [routerLink]="['/course-management', courseId, 'exams', examId, 'studentExams', value?.id, 'view']">
                                     <span jhitranslate="artemisApp.studentExams.View">View</span>
                                 </button>
                                 <button class="btn btn-primary btn-sm mr-1 mb-1" (click)="viewAssessment(value)">
