Implement deletion of exercise group

--- a/src/main/webapp/app/exam/manage/exercise-groups/exercise-groups.component.html
+++ b/src/main/webapp/app/exam/manage/exercise-groups/exercise-groups.component.html
@@ -11,6 +11,7 @@
         </button>
     </div>
 </div>
+<jhi-alert></jhi-alert>
 <div *ngFor="let exerciseGroup of exerciseGroups" class="mt-4" style="border: 1px solid #cccccc;">
     <div class="d-flex p-3" style="background-color: #e1e1e1;">
         <div>
