--- a/src/main/webapp/app/exam/manage/exams/exam-update.component.html
+++ b/src/main/webapp/app/exam/manage/exams/exam-update.component.html
@@ -1,1 +1,97 @@
-TODO
+<div class="row justify-content-center">
+    <div class="col-8">
+        <form name="editForm" role="form" #editForm="ngForm" (ngSubmit)="save()">
+            <div *ngIf="!exam.id; else edit">
+                <h4>{{ 'artemisApp.examManagement.createExam' | translate }}</h4>
+            </div>
+
+            <ng-template #edit>
+                <h4>{{ 'artemisApp.examManagement.editExam' | translate }}</h4>
+            </ng-template>
+
+            <div>
+                <jhi-alert-error></jhi-alert-error>
+                <div class="form-group" *ngIf="exam.course">
+                    <label class="form-control-label" for="course" jhiTranslate="artemisApp.examManagement.courseTitle">Course Title</label>
+                    <input id="course" name="course" readonly type="text" class="form-control" [value]="exam.course.title" />
+                </div>
+                <div class="form-group" *ngIf="exam.id">
+                    <label class="form-check-label" for="id" jhiTranslate="artemisApp.examManagement.examId">Exam ID</label>
+                    <input class="form-control" type="text" id="id" name="id" [value]="exam.id" readonly />
+                </div>
+                <div class="form-group">
+                    <label class="form-check-label" for="title" jhiTranslate="artemisApp.examManagement.examTitle">Exam Title</label>
+                    <input class="form-control" required type="text" name="title" id="title" [(ngModel)]="exam.title" />
+                </div>
+            </div>
+            <div class="form-row mb-3">
+                <div class="col-sm-4">
+                    <jhi-date-time-picker
+                        labelName="{{ 'artemisApp.examManagement.visibleDate' | translate }}"
+                        [(ngModel)]="exam.visibleDate"
+                        name="visibleDate"
+                        id="visibleDate"
+                    ></jhi-date-time-picker>
+                </div>
+                <div class="col-sm-4">
+                    <jhi-date-time-picker
+                        labelName="{{ 'artemisApp.examManagement.startDate' | translate }}"
+                        [(ngModel)]="exam.startDate"
+                        name="startDate"
+                        id="startDate"
+                    ></jhi-date-time-picker>
+                </div>
+                <div class="col-sm-4">
+                    <jhi-date-time-picker
+                        labelName="{{ 'artemisApp.examManagement.endDate' | translate }}"
+                        [(ngModel)]="exam.endDate"
+                        name="endDate"
+                        id="endDate"
+                    ></jhi-date-time-picker>
+                </div>
+            </div>
+            <div class="form-row mb-3">
+                <div class="col-sm-6">
+                    <label class="form-check-label" for="maxPoints" jhiTranslate="artemisApp.examManagement.maxPoints">Maximum Number of Points in Exam</label>
+                    <input id="maxPoints" name="maxPoints" class="form-control" type="number" min="0" [(ngModel)]="exam.maxPoints" />
+                </div>
+                <div class="col-sm-6">
+                    <label class="form-check-label" for="numberOfExercisesInExam" jhiTranslate="artemisApp.examManagement.numberOfExercisesInExam"
+                        >Number of Exercises in Exam</label
+                    >
+                    <input id="numberOfExercisesInExam" name="numberOfExercisesInExam" class="form-control" type="number" min="0" [(ngModel)]="exam.numberOfExercisesInExam" />
+                </div>
+            </div>
+            <div class="form-check mb-3">
+                <input class="form-check-input" type="checkbox" id="randomizeExerciseOrder" name="randomizeExerciseOrder" [(ngModel)]="exam.randomizeExerciseOrder" />
+                <label class="form-check-label" for="randomizeExerciseOrder" jhiTranslate="artemisApp.examManagement.randomizeQuestionOrder">
+                    Randomize Question Order
+                </label>
+            </div>
+            <div class="form-group">
+                <label for="startText" jhiTranslate="artemisApp.examManagement.startText">>Start Text</label>
+                <jhi-markdown-editor id="startText" class="markdown-editor" [(markdown)]="exam.startText" [enableResize]="true"></jhi-markdown-editor>
+            </div>
+            <div class="form-group">
+                <label for="startText" jhiTranslate="artemisApp.examManagement.endText">End Text</label>
+                <jhi-markdown-editor id="startText" class="markdown-editor" [(markdown)]="exam.endText" [enableResize]="true"></jhi-markdown-editor>
+            </div>
+            <div class="form-group">
+                <label for="startText" jhiTranslate="artemisApp.examManagement.confirmationStartText">Confirmation Start Text</label>
+                <jhi-markdown-editor id="confirmationStartText" class="markdown-editor" [(markdown)]="exam.confirmationStartText" [enableResize]="true"></jhi-markdown-editor>
+            </div>
+            <div class="form-group">
+                <label for="startText" jhiTranslate="artemisApp.examManagement.confirmationEndText">Confirmation End Text</label>
+                <jhi-markdown-editor id="confirmationEndText" class="markdown-editor" [(markdown)]="exam.confirmationEndText" [enableResize]="true"></jhi-markdown-editor>
+            </div>
+            <div>
+                <button type="button" class="btn btn-secondary" (click)="previousState()">
+                    <fa-icon [icon]="'ban'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel"> Cancel</span>
+                </button>
+                <button type="submit" [disabled]="editForm.form.invalid || isSaving" class="btn btn-primary">
+                    <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.save">Save</span>
+                </button>
+            </div>
+        </form>
+    </div>
+</div>
