--- a/src/main/webapp/app/exam/manage/exam-management.component.html
+++ b/src/main/webapp/app/exam/manage/exam-management.component.html
@@ -59,7 +59,7 @@
                     <td>{{ exam.endDate | artemisDate }}</td>
                     <td>{{ exam.startDate | durationTo: exam.endDate }}</td>
                     <td>{{ exam.registeredUsers || 0 }}</td>
-                    <td [showInOrionWindow]="false" class="text-right">
+                    <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
                             <div class="btn-group-vertical mr-1 mb-1">
                                 <button
