More generic method for determination of router link

--- a/src/main/webapp/app/exam/manage/exercise-groups/exercise-groups.component.html
+++ b/src/main/webapp/app/exam/manage/exercise-groups/exercise-groups.component.html
@@ -90,6 +90,7 @@
                                 [courseId]="courseId"
                                 [textExercise]="exercise"
                                 [examMode]="true"
+                                [examId]="examId"
                                 [exerciseGroupId]="exerciseGroup.id"
                             ></jhi-text-exercise-row-buttons>
                         </td>
