--- a/src/main/webapp/app/exam/manage/exercise-groups/exercise-groups.component.html
+++ b/src/main/webapp/app/exam/manage/exercise-groups/exercise-groups.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex pb-3 border-bottom">
     <div class="d-flex flex-column justify-content-center">
-        <h4 class="mb-0">{{ 'artemisApp.examManagement.exerciseGroup.exerciseGroups' | translate }}</h4>
+        <h4 class="mb-0">{{ 'artemisApp.examManagement.exerciseGroups' | translate }}</h4>
     </div>
     <div class="d-flex justify-content-end" style="flex: 1;">
         <button *jhiHasAnyAuthority="['ROLE_ADMIN', 'ROLE_INSTRUCTOR']" class="btn btn-primary jh-create-entity create-course" [routerLink]="['new']">
