Adjust route to exercise group in exam management overview

--- a/src/main/webapp/app/exam/manage/exam-management.component.html
+++ b/src/main/webapp/app/exam/manage/exam-management.component.html
@@ -65,7 +65,7 @@
                                 <button
                                     *ngIf="isAtLeastInstructor"
                                     type="submit"
-                                    [routerLink]="[exam.id, 'exerciseGroups']"
+                                    [routerLink]="[exam.id, 'exercise-groups']"
                                     class="btn btn-primary btn-sm mr-1 mb-1 exercise-button"
                                     id="exercises-button-{{ exam.id }}"
                                 >
