--- a/src/main/webapp/app/exam/manage/exam-management.component.html
+++ b/src/main/webapp/app/exam/manage/exam-management.component.html
@@ -80,7 +80,7 @@
                                 </button>
                             </div>
                             <div class="btn-group-vertical mr-1 mb-1" *jhiHasAnyAuthority="['ROLE_ADMIN', 'ROLE_INSTRUCTOR']">
-                                <button type="submit" *ngIf="isAtLeastInstructor" [routerLink]="[exam.id, 'studentExams']" class="btn btn-primary btn-sm mr-1 mb-1">
+                                <button type="submit" *ngIf="isAtLeastInstructor" [routerLink]="[exam.id, 'student-exams']" class="btn btn-primary btn-sm mr-1 mb-1">
                                     <fa-icon [icon]="'eye'"></fa-icon>
                                     <span class="d-none d-md-inline">{{ 'artemisApp.examManagement.studentExams' | translate }}</span>
                                 </button>
