--- a/src/main/webapp/app/exercises/text/assess/text-assessment-dashboard/text-assessment-dashboard.component.html
+++ b/src/main/webapp/app/exercises/text/assess/text-assessment-dashboard/text-assessment-dashboard.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="exercise; else loading">
+<div *ngIf="exercise">
     <h4 jhiTranslate="artemisApp.textAssessment.dashboard.heading" [translateValues]="{ exerciseTitle: exercise.title }"></h4>
     <jhi-assessment-filters [submissions]="submissions" (filterChange)="updateFilteredSubmissions($event)"></jhi-assessment-filters>
     <ng-container *ngIf="!busy; else loading"></ng-container>
@@ -103,10 +103,4 @@
 
 <ng-template #emptyTable>
     <p jhiTranslate="artemisApp.assessment.dashboard.empty">No Submissions for this exercise!</p>
-</ng-template>
-
-<ng-template #loading>
-    <h2>
-        <span style="color: grey;"><fa-icon [icon]="'spinner'" [spin]="true"></fa-icon>&nbsp;<span jhiTranslate="artemisApp.assessment.dashboard.loading">Loading..</span></span>
-    </h2>
 </ng-template>
