--- a/src/main/webapp/app/exercises/text/assess/text-assessment-dashboard/text-assessment-dashboard.component.html
+++ b/src/main/webapp/app/exercises/text/assess/text-assessment-dashboard/text-assessment-dashboard.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="exercise">
     <h4 jhiTranslate="artemisApp.textAssessment.dashboard.heading" [translateValues]="{ exerciseTitle: exercise.title }"></h4>
     <jhi-assessment-filters [submissions]="submissions" (filterChange)="updateFilteredSubmissions($event)"></jhi-assessment-filters>
-    <ng-container *ngIf="!busy; else loading"></ng-container>
+    <ng-container *ngIf="!busy"></ng-container>
     <jhi-assessment-warning [exercise]="exercise"></jhi-assessment-warning>
     <div class="table-responsive" *ngIf="submissions && submissions.length > 0; else emptyTable">
         <table class="table table-striped exercise-table">
