Reload exercise groups when associated exercise was deleted

--- a/src/main/webapp/app/exam/manage/exercise-groups/exercise-groups.component.html
+++ b/src/main/webapp/app/exam/manage/exercise-groups/exercise-groups.component.html
@@ -94,6 +94,7 @@
                                 [examMode]="true"
                                 [examId]="examId"
                                 [exerciseGroupId]="exerciseGroup.id"
+                                (onDeleteExercise)="loadExerciseGroups()"
                             ></jhi-text-exercise-row-buttons>
                         </td>
                     </tr>
