--- a/src/main/webapp/app/exercises/text/manage/text-exercise/text-exercise-row-buttons.component.html
+++ b/src/main/webapp/app/exercises/text/manage/text-exercise/text-exercise-row-buttons.component.html
@@ -1,6 +1,7 @@
 <div class="btn-group flex-btn-group-container">
+    <!-- TODO: display this button in exam mode when its functionality implemented -->
     <button
-        *ngIf="examMode || textExercise.isAtLeastTutor"
+        *ngIf="!examMode && textExercise.isAtLeastTutor"
         type="submit"
         [routerLink]="['/course-management', courseId, 'exercises', textExercise.id, 'scores']"
         class="btn btn-info btn-sm mr-1"
@@ -8,17 +9,19 @@
         <fa-icon [icon]="'eye'"></fa-icon>
         <span class="d-none d-md-inline" jhiTranslate="entity.action.scores">Scores</span>
     </button>
+    <!-- TODO: display this button in exam mode when its functionality implemented -->
     <button
         type="submit"
-        *ngIf="examMode || textExercise.isAtLeastInstructor"
+        *ngIf="!examMode && textExercise.isAtLeastInstructor"
         [routerLink]="['/course-management', courseId, 'text-exercises', textExercise.id, 'assessment']"
         class="btn btn-primary btn-sm mr-1"
     >
         <fa-icon [icon]="['far', 'list-alt']"></fa-icon>
         <span class="d-none d-md-inline" jhiTranslate="artemisApp.courseOverview.exerciseDetails.instructorActions.submissions">Submissions</span>
     </button>
+    <!-- TODO: display this button in exam mode when its functionality implemented -->
     <button
-        *ngIf="examMode || textExercise.isAtLeastTutor"
+        *ngIf="!examMode && textExercise.isAtLeastTutor"
         type="submit"
         [routerLink]="['/course-management', courseId, 'exercises', textExercise.id, 'participations']"
         class="btn btn-primary btn-sm mr-1"
@@ -35,8 +38,9 @@
         <fa-icon [icon]="'users'"></fa-icon>
         <span class="d-none d-md-inline" jhiTranslate="artemisApp.exercise.teams">Teams</span>
     </button>
+    <!-- TODO: display this button in exam mode when its functionality implemented -->
     <button
-        *ngIf="examMode || textExercise.isAtLeastInstructor"
+        *ngIf="!examMode && textExercise.isAtLeastInstructor"
         type="submit"
         [routerLink]="['/course-management', courseId, 'text-exercises', textExercise.id]"
         class="btn btn-info btn-sm mr-1"
