--- a/src/main/webapp/app/exam/manage/student-exams/student-exams.component.html
+++ b/src/main/webapp/app/exam/manage/student-exams/student-exams.component.html
@@ -1,1 +1,132 @@
-TODO
+<div>
+    <div class="d-flex">
+        <div class="mb-3">
+            <h2>
+                <span jhiTranslate="artemisApp.studentExams.title">Student exams</span>
+            </h2>
+        </div>
+        <div class="ml-auto d-flex">
+            <button class="btn btn-primary" style="height: 40px;" (click)="generateStudentExams()" *ngIf="course?.isAtLeastInstructor">
+                <span jhiTranslate="artemisApp.studentExams.generateStudentExams">Generate student exams</span>
+            </button>
+        </div>
+    </div>
+    <jhi-alert></jhi-alert>
+    <jhi-data-table
+        [isLoading]="isLoading"
+        entityType="studentExam"
+        [allEntities]="studentExams"
+        entitiesPerPageTranslation="artemisApp.exercise.resultsPerPage"
+        showAllEntitiesTranslation="artemisApp.exercise.showAllResults"
+        [searchPlaceholderTranslation]="'artemisApp.studentExams.searchForStudents'"
+        [searchFields]="['user.login', 'user.name']"
+        [searchTextFromEntity]="searchTextFromStudentExam"
+        [searchResultFormatter]="searchResultFormatter"
+        (entitiesSizeChange)="handleStudentExamsSizeChange($event)"
+    >
+        <ng-template let-settings="settings" let-controls="controls">
+            <ngx-datatable
+                class="bootstrap"
+                [limit]="settings.limit"
+                [sortType]="settings.sortType"
+                [columnMode]="settings.columnMode"
+                [headerHeight]="settings.headerHeight"
+                [footerHeight]="settings.footerHeight"
+                [rowHeight]="settings.rowHeight"
+                [rows]="settings.rows"
+                [rowClass]="settings.rowClass"
+                [scrollbarH]="settings.scrollbarH"
+            >
+                <ngx-datatable-column prop="id" [minWidth]="60" [width]="80" [maxWidth]="100">
+                    <ng-template ngx-datatable-header-template>
+                        <span class="datatable-header-cell-wrapper" (click)="controls.onSort('id')">
+                            <span class="datatable-header-cell-label bold sortable" jhiTranslate="artemisApp.studentExams.id">
+                                ID
+                            </span>
+                            <fa-icon [icon]="controls.iconForSortPropField('id')"></fa-icon>
+                        </span>
+                    </ng-template>
+                    <ng-template ngx-datatable-cell-template let-value="value">
+                        <div>
+                            <a routerLink="/course-management/{{ courseId }}/exams/{{ examId }}/student-exams/{{ value }}/view">{{ value }}</a>
+                        </div>
+                    </ng-template>
+                </ngx-datatable-column>
+
+                <ngx-datatable-column prop="studentExam" [minWidth]="80" [width]="80">
+                    <ng-template ngx-datatable-header-template>
+                        <span class="datatable-header-cell-wrapper" (click)="controls.onSort('studentExam')">
+                            <span class="datatable-header-cell-label bold sortable" jhiTranslate="artemisApp.studentExams.exam">
+                                Exam
+                            </span>
+                            <fa-icon [icon]="controls.iconForSortPropField('studentExam')"></fa-icon>
+                        </span>
+                    </ng-template>
+                    <ng-template ngx-datatable-cell-template let-value="value">
+                        <a routerLink="/course-management/{{ courseId }}/exams/{{ examId }}/view">{{ course?.title }}</a>
+                    </ng-template>
+                </ngx-datatable-column>
+
+                <ngx-datatable-column prop="user" [minWidth]="120" [width]="120">
+                    <ng-template ngx-datatable-header-template>
+                        <span class="datatable-header-cell-wrapper" (click)="controls.onSort('user')">
+                            <span class="datatable-header-cell-label bold sortable" jhiTranslate="artemisApp.studentExams.student">
+                                Student
+                            </span>
+                            <fa-icon [icon]="controls.iconForSortPropField('user.name')"></fa-icon>
+                        </span>
+                    </ng-template>
+                    <ng-template ngx-datatable-cell-template let-value="value">
+                        <a routerLink="/admin/user-management/{{ value?.login }}/view">{{ value?.name }}</a>
+                    </ng-template>
+                </ngx-datatable-column>
+
+                <ngx-datatable-column prop="result" [width]="180">
+                    <ng-template ngx-datatable-header-template>
+                        <span class="datatable-header-cell-wrapper" (click)="controls.onSort('result')">
+                            <span class="datatable-header-cell-label bold sortable" jhiTranslate="artemisApp.studentExams.result">
+                                Result
+                            </span>
+                            <fa-icon [icon]="controls.iconForSortPropField('result')"></fa-icon>
+                        </span>
+                    </ng-template>
+                    <ng-template ngx-datatable-cell-template let-value="value">
+                        {{ value }}
+                    </ng-template>
+                </ngx-datatable-column>
+
+                <ngx-datatable-column prop="exam" [width]="180">
+                    <ng-template ngx-datatable-header-template>
+                        <span class="datatable-header-cell-wrapper" (click)="controls.onSort('exam')">
+                            <span class="datatable-header-cell-label bold sortable" jhiTranslate="artemisApp.studentExams.created">
+                                Created
+                            </span>
+                            <fa-icon [icon]="controls.iconForSortPropField('creationDate')"></fa-icon>
+                        </span>
+                    </ng-template>
+                    <ng-template ngx-datatable-cell-template let-value="value">
+                        {{ value?.startDate | artemisDate: 'long':true }}
+                    </ng-template>
+                </ngx-datatable-column>
+
+                <ngx-datatable-column prop="" [minWidth]="350" [width]="350">
+                    <ng-template ngx-datatable-cell-template let-value="value">
+                        <div class="w-100 text-right">
+                            <div class="btn-group" *ngIf="course?.isAtLeastTutor">
+                                <button
+                                    class="btn btn-primary btn-sm mr-1 mb-1"
+                                    [routerLink]="['/course-management', courseId, 'exams', examId, 'student-exams', value?.id, 'view']"
+                                >
+                                    <span jhiTranslate="artemisApp.studentExams.view">View</span>
+                                </button>
+                                <button class="btn btn-primary btn-sm mr-1 mb-1" (click)="viewAssessment(value)">
+                                    <span jhiTranslate="artemisApp.studentExams.assessment">Assessment</span>
+                                </button>
+                            </div>
+                        </div>
+                    </ng-template>
+                </ngx-datatable-column>
+            </ngx-datatable>
+        </ng-template>
+    </jhi-data-table>
+</div>
