--- a/src/main/webapp/app/exam/participate/exam-participation.component.html
+++ b/src/main/webapp/app/exam/participate/exam-participation.component.html
@@ -2,7 +2,7 @@
 <div *ngIf="!disconnected" class="exam-footer connected">
     <div class="container">
         <div class="exam-footer-content">
-            <p jhiTranslate="artemisApp.examParticipation.connected"></p>
+            <p jhiTranslate="artemisApp.examParticipation.connected" class="mb-0"></p>
             <jhi-connection-status class="connection-status-exam-participation"></jhi-connection-status>
         </div>
     </div>
