--- a/src/main/webapp/app/exam/participate/exam-participation.component.html
+++ b/src/main/webapp/app/exam/participate/exam-participation.component.html
@@ -11,7 +11,7 @@
 <div *ngIf="disconnected" class="exam-footer disconnected">
     <div class="container">
         <div class="exam-footer-content">
-            <p jhiTranslate="artemisApp.examParticipation.disconnected"></p>
+            <p jhiTranslate="artemisApp.examParticipation.disconnected" class="mb-0"></p>
             <jhi-connection-status class="connection-status-exam-participation"></jhi-connection-status>
         </div>
     </div>
