add css for smaller screens

--- a/src/main/webapp/app/shared/resizeable-container/resizeable-container.component.html
+++ b/src/main/webapp/app/shared/resizeable-container/resizeable-container.component.html
@@ -27,7 +27,7 @@
                     </div>
                     <ng-container *ngTemplateOutlet="rightHeaderSpan"></ng-container>
                 </h3>
-                <fa-icon [icon]="'chevron-right'"></fa-icon>
+                <fa-icon id="right-header-icon" [icon]="'chevron-right'"></fa-icon>
             </div>
             <div class="card-body">
                 <ng-content select="[right-body]"></ng-content>
