--- a/src/main/webapp/app/shared/resizeable-container/resizeable-container.component.scss
+++ b/src/main/webapp/app/shared/resizeable-container/resizeable-container.component.scss
@@ -97,3 +97,28 @@
         padding-left: 5px;
     }
 }
+// for smaller screens (tablets, phones)
+@media (max-width: 991.98px) {
+    :host {
+        flex-flow: column-reverse;
+    }
+
+    .expanded {
+        width: 100%;
+
+        .draggable-left {
+            display: none;
+        }
+        .card {
+            margin-bottom: 30px;
+        }
+
+        .card-header {
+            pointer-events: none;
+        }
+
+        #right-header-icon {
+            display: none;
+        }
+    }
+}
