--- a/src/main/webapp/app/exercises/file-upload/participate/file-upload-submission.component.html
+++ b/src/main/webapp/app/exercises/file-upload/participate/file-upload-submission.component.html
@@ -16,9 +16,11 @@
 
 <jhi-alert></jhi-alert>
 
-<jhi-resizeable-container class="col-12">
+
+
+<jhi-resizeable-container class="col-12" *ngIf="fileUploadExercise">
     <!--region Left Panel-->
-    <span left-header>{{ fileUploadExercise.title }}</span>
+    <span left-header *ngIf="fileUploadExercise.title">{{ fileUploadExercise.title }}</span>
     <div left-body class="mt-4 px-2 pb-2 w-100">
         <div class="row">
             <div class="col-12 col-md-6" *ngIf="(isActive || isLate) && !result && fileUploadExercise && submission">
