--- a/src/main/webapp/app/exercises/modeling/participate/modeling-submission.component.html
+++ b/src/main/webapp/app/exercises/modeling/participate/modeling-submission.component.html
@@ -16,9 +16,9 @@
 
 <jhi-alert></jhi-alert>
 
-<jhi-resizeable-container class="col-12">
+<jhi-resizeable-container class="col-12" *ngIf="modelingExercise">
     <!--region Left Panel-->
-    <span left-header>{{ modelingExercise.title }}</span>
+    <span left-header *ngIf="modelingExercise.title">{{ modelingExercise.title }}</span>
     <div left-body class="submission-container d-flex flex-column pl-2 mt-3 w-100">
         <div class="d-flex flex-column flex-md-row" *ngIf="modelingExercise">
             <div *ngIf="modelingExercise?.teamMode && (isActive || isLate)" class="flex-shrink-0 align-self-end align-self-md-stretch mb-2 ml-md-2 ml-lg-3">
@@ -107,7 +107,7 @@
     <!--region Right Panel-->
     <fa-icon right-header [icon]="['far', 'list-alt']"></fa-icon>&nbsp;
     <span right-header jhiTranslate="artemisApp.modelingSubmission.problemStatement">Problem Statement</span>
-    <p right-body class="mb-3 markdown-preview">
+    <p right-body class="mb-3 markdown-preview" *ngIf="modelingExercise!.problemStatement">
         <span [innerHTML]="modelingExercise!.problemStatement! | htmlForMarkdown"></span>
     </p>
     <!--endregion-->
