--- a/src/main/webapp/app/exercises/text/participate/text-editor.component.html
+++ b/src/main/webapp/app/exercises/text/participate/text-editor.component.html
@@ -17,9 +17,9 @@
 <jhi-alert></jhi-alert>
 <!--resizable container-->
 <div class="row">
-    <jhi-resizeable-container class="col-12">
+    <jhi-resizeable-container class="col-12" *ngIf="textExercise">
         <!--region Left Panel-->
-        <span left-header>{{ textExercise.title }}</span>
+        <span left-header *ngIf="textExercise.title">{{ textExercise.title }}</span>
         <div left-body class="text-editor-grid mt-4 pl-2 pb-2 w-100">
             <div class="grid-area-team-info pb-4 pl-md-2" *ngIf="textExercise?.teamMode && isActive">
                 <jhi-team-participate-info-box
