--- a/src/main/webapp/app/exercises/shared/participation/participation.component.html
+++ b/src/main/webapp/app/exercises/shared/participation/participation.component.html
@@ -135,7 +135,7 @@
                         </span>
                     </ng-template>
                     <ng-template ngx-datatable-cell-template let-value="value">
-                        {{ value | artemisDate: 'long':true }}
+                        {{ value.format('MMMM Do YYYY, h:mm:ss a') }}
                     </ng-template>
                 </ngx-datatable-column>
 
