Used SortService in Exam-Management Component

--- a/src/main/webapp/app/exam/manage/exam-management.component.html
+++ b/src/main/webapp/app/exam/manage/exam-management.component.html
@@ -16,7 +16,7 @@
     <div class="table-responsive" *ngIf="exams">
         <table class="table table-striped">
             <thead>
-                <tr>
+                <tr jhiSort [(predicate)]="predicate" [(ascending)]="ascending" [callback]="sortRows.bind(this)">
                     <th class="d-none d-md-table-cell"></th>
                     <th class="d-none d-md-table-cell" jhisortby="id">
                         <span>{{ 'global.field.id' | translate }}</span>
@@ -44,7 +44,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let exam of exams | sortBy: predicate:true; trackBy: trackId">
+                <tr *ngFor="let exam of exams; trackBy: trackId">
                     <td class="d-none d-md-table-cell">
                         <div [ngStyle]="{ backgroundColor: ARTEMIS_DEFAULT_COLOR, width: '15px', height: '20px' }">&nbsp;</div>
                     </td>
