Correct sorting in exam-management component

--- a/src/main/webapp/app/exam/manage/exam-management.component.html
+++ b/src/main/webapp/app/exam/manage/exam-management.component.html
@@ -18,27 +18,32 @@
             <thead>
                 <tr jhiSort [(predicate)]="predicate" [(ascending)]="ascending" [callback]="sortRows.bind(this)">
                     <th class="d-none d-md-table-cell"></th>
-                    <th class="d-none d-md-table-cell" jhisortby="id">
+                    <th class="d-none d-md-table-cell" jhiSortBy="id">
                         <span>{{ 'global.field.id' | translate }}</span>
                         <fa-icon [icon]="'sort'"></fa-icon>
                     </th>
                     <th jhiSortBy="title">
                         <span>{{ 'artemisApp.exam.title' | translate }}</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
                     </th>
                     <th class="d-none d-md-table-cell" jhiSortBy="visibleDate">
                         <span>{{ 'artemisApp.exam.visible' | translate }}</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
                     </th>
                     <th jhiSortBy="startDate">
                         <span>{{ 'artemisApp.exam.startDate' | translate }}</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
                     </th>
                     <th jhiSortBy="endDate">
                         <span>{{ 'artemisApp.exam.endDate' | translate }}</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
                     </th>
                     <th>
                         <span>{{ 'artemisApp.exam.duration' | translate }}</span>
                     </th>
                     <th jhiSortBy="registeredUsers">
                         <span>{{ 'artemisApp.exam.nrOfStudents' | translate }}</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
                     </th>
                     <th></th>
                 </tr>
